2012-11-14  Joseph Pecoraro  <pecoraro@apple.com>

        [CF]: XMLHttpRequest "timeout" events firing as "error" events
        https://bugs.webkit.org/show_bug.cgi?id=102271

        Reviewed by David Kilzer.

        Initialize the tiemout flag if the error results from a timeout
        in the USE(CFNETWORK) cases.

        No new tests. This is covered by http/tests/xmlhttprequest/timeout
        tests on ports that USE(CFNETWORK).

        * platform/network/cf/ResourceErrorCF.cpp:
        (WebCore::ResourceError::ResourceError):
        * platform/network/mac/ResourceErrorMac.mm:
        (WebCore::ResourceError::ResourceError):

2012-11-14  Nico Weber  <thakis@chromium.org>

        [chromium/mac] Fix drawing of buttons, checkboxes, radio boxes, and steppers when the page is scaled
        https://bugs.webkit.org/show_bug.cgi?id=102282

        Reviewed by James Robinson.

        Chromium uses skia, and skia state is synced with CG context state at
        LocalCurrentGraphicsContext construction time. So delay that
        construction after context transforms have happened.
        (This regressed in http://trac.webkit.org/changeset/125830)

        Covered by the new pixel test fast/forms/zoomed-controls.html. I
        couldn't find an existing test for this.

        * platform/mac/ThemeMac.mm:
        (WebCore::paintCheckbox):
        (WebCore::paintRadio):
        (WebCore::paintButton):

2012-11-14  Mark Lam  <mark.lam@apple.com>

        Change JSEventListener::m_jsFunction to be a weak ref.
        https://bugs.webkit.org/show_bug.cgi?id=101989.

        Reviewed by Geoffrey Garen.

        No new tests.

        * ForwardingHeaders/heap/SlotVisitor.h: Added.
        * bindings/js/JSDOMBinding.h: Added #include <heap/SlotVisitor.h>
        * bindings/js/JSEventListener.cpp:
        (WebCore::JSEventListener::JSEventListener):
        (WebCore::JSEventListener::visitJSFunction):
        (WebCore::JSEventListener::operator==):